package music.analysis.feature.name;

public interface MelodicFeatureName {

}
